# cuda_op_benchmark

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
common/: activation_types.h  allocator.h  cublasAlgoMap.cc  cublasAlgoMap.h  cublasMMWrapper.cc  cublasMMWrapper.h  cuda_bf16_fallbacks.cuh  cuda_runtime.cpp  cuda_runtime.cu  cuda_runtime.hpp  cuda_type_utils.cuh  cuda_utils.cc  cuda_utils.h  logger.cc  logger.h  memory_utils.cu  memory_utils.h  string_utils.h  tensor.cpp  tensor.hpp  timer.cpp  timer.hpp
include/: defines.hpp  enum.hpp  log.hpp
scripts/: build_linux.sh  docker_run.sh
source/: creator_factory.cpp  creator_factory.hpp  operator.hpp
source/attention/: attention.cpp  attention.hpp
source/attention/bytetransformer_attention/: attention_fused_long.cu  byte_attention.h
source/attention/flash_attention/: flash_attention.cpp  flash_attention_kernel.cu  flash_attention_kernel.cuh
source/attention/flash_attention2/: flash.h  flash_attention2.cpp  flash_attention2.hpp  flash_fwd_kernel.h  flash_fwd_launch_template.h
source/attention/flash_attention_for_t4/: flash_attn_kernel.cu  flash_attn_kernel.cuh  flash_byte_attention.cpp  flash_byte_attention.hpp  utils.h
source/attention/flash_decode_attention/: flash_attn_kernel.cu  flash_attn_kernel.cuh  flash_decode_attention.cpp  flash_decode_attention.hpp  flash_fwd_kernel.h  flash_fwd_launch_template.h  softmax.h
source/attention/handle_fa_wo_cutlass/: flash_attention.hpp
source/attention/memory_efficient_attention/: mem_effi_attention.cpp  mem_effi_attention.hpp
source/attention/unfused_attention/: unfused_attention.cpp  unfused_attention.hpp  unfused_attention_kernel.cu  unfused_attention_kernel.hpp
source/attention/unfused_attention_cublas/: ft_bert_attention.cpp  ft_bert_attention.hpp  open_attention.cu  open_attention.h
source/gemm/: gemm.cpp  gemm.hpp  gemm_kernel.cu  gemm_runner.hpp
tests/: cuda_main.cpp  test_suite.cpp  test_suite.hpp  test_utils.hpp
tests/operators/: attention_test.cpp  gemm_test.cpp
